# resolve.api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: database.py  main.py  settings.py
app/api/auth/: auth_controller.py
app/api/client/: client_controller.py
app/api/countries/: countries_controller.py
app/api/document/: document_controller.py
app/api/service/: service_controller.py
app/api/user/: users_controller.py
app/domain/entities/: accordance_entity.py  appointment_entity.py  client_entity.py  document_entity.py  judicial_notification_entity.py  payment_entity.py  receipt_entity.py  repass_entity.py  service_entity.py  service_field_entity.py  service_field_type_entity.py  service_notes_entity.py  service_status_entity.py  service_type_entity.py  user_entity.py  user_role_entity.py
app/domain/helpers/: pagination.py  permission.py  security.py
app/domain/repositories/: client_repository.py  country_repository.py  (+4 more)
app/helpers/: pagination.py  permission.py  security.py
app/models/: aggregates.py  client_model.py  user_model.py  with_date_model.py
app/repositories/: service_repository.py  user_repository.py
app/routers/: auth_router.py  service_router.py  users_router.py
migrations/: env.py
migrations/versions/: 3939203b71cb_initial_database.py  42f4fac33c98_initial_database_state.py  60d9abb06aeb_initial_database_state.py  62bf7401881d_user_role_user_roles.py
tests/: conftest.py  test_user_event.py  test_users.py
tests/mocks/: client_factory.py  user_factory.py  user_mock.py
(+79 files in other folders)
