[project]
name = "resolve-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevyn Menezes",email = "shamior_@hotmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.133.1,<0.134.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "resolve"}]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT", "FAST"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"



[tool.taskipy.tasks]
lint = "ruff check"

pre_format = "ruff check --fix"
format = "ruff format"

run = "fastapi dev app/main.py"

pre_test = "task lint"
test = "pytest -s -x --cov=app -vv"
post_test = "coverage html"

pre_ptest = "task pre_test"
ptest = "pytest -s -vv"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]
